--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -21,10 +21,9 @@ services:
         DIR_WORK: "/usr/src/app"
         ENV_YML: "environment.yaml"
         VENV: "bioinfo"
-        DIR_CONDA: "/opt/conda"
         REQ_DIR: "requirements/"
         REQ_TXT: "dev.txt"
-    command: gunicorn config.wsgi.dev:application --bind 0.0.0.0:8000
+    command: mamba run --name bioinfo gunicorn config.wsgi.dev:application --bind 0.0.0.0:8000
     volumes:
       - ./app:/usr/src/app
     expose:
@@ -56,11 +55,10 @@ services:
         DIR_WORK: "/usr/src/app/notebooks"
         ENV_YML: "environment.yaml"
         VENV: "bioinfo"
-        DIR_CONDA: "/opt/conda"
         REQ_TXT: "requirements.txt"
     image: tyamadabiodataeng/django-drf-jupyter
     container_name: jupyter
-    command: jupyter lab --ip=0.0.0.0 --allow-root --LabApp.token=''
+    command: mamba run --name bioinfo jupyter lab --ip=0.0.0.0 --allow-root --LabApp.token=''
     ports:
      - "8888:8888"
     volumes:
