--- a/compose.yaml
+++ b/compose.yaml
@@ -21,10 +21,9 @@ services:
         DIR_WORK: "/usr/src/app"
         ENV_YML: "environment.yaml"
         VENV: "bioinfo"
-        DIR_CONDA: "/opt/conda"
         REQ_DIR: "requirements/"
         REQ_TXT: "prod.txt"
-    command: gunicorn config.wsgi.prod:application --bind 0.0.0.0:8000
+    command: mamba run --name bioinfo gunicorn config.wsgi.prod:application --bind 0.0.0.0:8000
     volumes:
       - ./app:/usr/src/app
     expose:
